--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <body>
         <h1 style="color: red; font-weight:bold; font-size:20px;">Un titre</h1>
         <p>Git est un logiciel de gestion de version</p> 
+
+        <h2>C'est trop intéressant Git et github</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum eos quaerat, esse omnis tempora optio iure maxime. Ducimus ex rerum earum aliquam, quas, sapiente voluptates aspernatur cum debitis vel asperiores!</p>  
     </body>
 </html>
